--- a/.gitignore
+++ b/.gitignore
@@ -7,6 +7,9 @@
 # Byte-compiled / optimized / DLL files
 __pycache__/*
 
+# testdata
+testdata/*
+
 # test and debug files
 test.ipynb
 classtest.ipynb
